[gd_scene load_steps=11 format=3 uid="uid://ciin251ecvwj6"]

[ext_resource type="Script" uid="uid://ch423d7aciqht" path="res://scripts/levels/level_01.gd" id="1_32ihy"]
[ext_resource type="MeshLibrary" uid="uid://dkmfn84yaexcd" path="res://assets/models/blocks.meshlib" id="1_fmn4l"]
[ext_resource type="PackedScene" uid="uid://buf1kiwp2rx1w" path="res://ball/ball.tscn" id="2_rdraa"]
[ext_resource type="Script" uid="uid://cliagejculu8e" path="res://scripts/death_zone.gd" id="3_vuu73"]
[ext_resource type="Script" uid="uid://cjpsqfbq0gshx" path="res://environment/victory_zone.gd" id="4_roo3c"]
[ext_resource type="AudioStream" uid="uid://cdetvufywa2hs" path="res://assets/sound/backgroundMusic.mp3" id="5_pl0a7"]
[ext_resource type="PackedScene" uid="uid://rur8ocsxec2j" path="res://environment/pause_menu.tscn" id="7_sg80t"]

[sub_resource type="Environment" id="Environment_rdraa"]
background_mode = 1
background_color = Color(7.31587e-06, 0.609826, 0.716026, 1)
ambient_light_source = 2
ambient_light_color = Color(0, 0.611765, 0.717647, 1)
tonemap_mode = 3
fog_enabled = true
fog_light_color = Color(0, 0.611765, 0.717647, 1)
adjustment_enabled = true
adjustment_brightness = 0.75
adjustment_contrast = 1.5
adjustment_saturation = 1.2

[sub_resource type="BoxShape3D" id="BoxShape3D_rdraa"]
size = Vector3(150, 1, 150)

[sub_resource type="BoxShape3D" id="BoxShape3D_vuu73"]
size = Vector3(2, 1, 2)

[node name="Level_01" type="Node3D"]
script = ExtResource("1_32ihy")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_fmn4l")
cell_size = Vector3(4, 4, 4)
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PackedInt32Array(0, 0, 655360, 0, 1, 1441793, 65535, 0, 655361, 1, 0, 1, 1, 65535, 2, 1, 1, 1441794, 65535, 1, 655362, 65535, 65535, 1048578, 0, 65535, 1048576, 0, 65534, 0, 0, 65533, 0, 0, 65532, 4, 65536, 65531, 0, 131071, 65531, 0, 65537, 65531, 0, 65536, 65529, 0, 65536, 65530, 0, 131071, 65530, 0, 65537, 65530, 0, 0, 65528, 655364, -65536, 65527, 655364, -65535, 65527, 655364, -1, 65527, 655364, 65535, 65528, 655364, 1, 65528, 655364, 65537, 65529, 655360, 131071, 65529, 655360, -65535, 65526, 655360, -65536, 65526, 655360, -1, 65526, 655360, -65535, 65525, 655360, -65536, 65525, 655360, -1, 65525, 655360, -1, 65524, 1048577, -65535, 65524, 1048577, -65534, 65526, 1441794, -2, 65526, 655362, -65534, 65524, 2, -2, 65524, 1048578, -65536, 65524, 1048577, -65534, 65525, 1, -2, 65525, 1048576, -3, 65525, 1048576, -5, 65525, 1048576, -4, 65525, 1048576, -6, 65525, 1048576, -7, 65525, 1048576, -10, 65525, 1048576, -11, 65525, 1048576, -12, 65525, 1048576, -13, 65525, 1048576, -14, 65525, 1048576, -15, 65525, 1048580, -8, 65525, 1048576, -14, 65526, 655362, -14, 65524, 1048578, -13, 65526, 1441793, -13, 65524, 1048577, -12, 65526, 1441794, -12, 65524, 2, 65520, 65525, 1048580, 131055, 65525, 1048580, 196590, 65525, 1048580, 262125, 65525, 1048576, 262125, 65524, 1, 262125, 65526, 1441792, 262124, 65524, 1048576, 262124, 65525, 1048576, 262124, 65526, 1441792, 262122, 65526, 1441792, 262123, 65526, 1441792, 262122, 65524, 1441792, 262122, 65525, 1441792, 262122, 65523, 1048577, 262124, 65523, 1048577, 262125, 65523, 2, 262125, 65527, 1441794, 262121, 65524, 1441792, 262120, 65523, 1048578, 262120, 65527, 655362, 262120, 65524, 655361, 262120, 65525, 655361, 262120, 65526, 655361, 262121, 65523, 1048577, 262124, 65527, 1441793, 262123, 65527, 1441793, 262122, 65527, 1441793, 262121, 65527, 1441793, 262121, 65525, 1441792, 262123, 65525, 1441792, 262123, 65523, 1048577, -65555, 65524, 1441792, -65555, 65525, 1441792, -65555, 65522, 1441792, -65556, 65523, 1441792, -65555, 65523, 1441792, -65554, 65523, 1441792, -65554, 65525, 1441792, -65554, 65522, 1441792, -65554, 65524, 1441792, -65556, 65524, 1441792, -65556, 65522, 1441792, -65556, 65525, 1441792)
}
metadata/_editor_floor_ = Vector3(0, -2, 0)

[node name="Ball" parent="." instance=ExtResource("2_rdraa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, 0.75, -0.433013, 0, 0.5, 0.866025, 0.866025, -0.433013, 0.25, 0, 5, 0)
light_color = Color(0.994714, 0.783687, 0.600066, 1)
light_energy = 2.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_rdraa")

[node name="DeathZone" type="Area3D" parent="."]
script = ExtResource("3_vuu73")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeathZone"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, -50, 0)
shape = SubResource("BoxShape3D_rdraa")

[node name="VictoryZone" type="Area3D" parent="."]
script = ExtResource("4_roo3c")
NEXT_LEVEL = "uid://cbape77igbyxo"

[node name="CollisionShape3D" type="CollisionShape3D" parent="VictoryZone"]
transform = Transform3D(0.999824, -0.0183498, -0.00398625, 0.0183346, 0.999825, -0.00381148, 0.00405549, 0.00373772, 0.999985, 14.9849, 1.27189, -29.2489)
shape = SubResource("BoxShape3D_vuu73")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pl0a7")

[node name="PauseMenu" parent="." instance=ExtResource("7_sg80t")]

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_right = 39.0
offset_bottom = 54.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60

[connection signal="body_entered" from="DeathZone" to="DeathZone" method="_on_body_entered"]
[connection signal="body_entered" from="VictoryZone" to="VictoryZone" method="_on_body_entered"]
